--- a/post.html
+++ b/post.html
@@ -42,7 +42,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Travel Guide</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,7 +55,7 @@
                         <a href="about.html" style="color: #303030">About</a>
                     </li>
                     <li>
-                        <a href="post.html" style="color: #303030">Sample Post</a>
+                        <a href="post.html" style="color: #303030">Posts</a>
                     </li>
                     <li>
                         <a href="contact.html" style="color: #303030">Contact</a>
@@ -69,7 +69,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/post-bg.jpg')">
+    <header class="intro-header" style="background-image: url('http://www.grahamwiffenphotography.com/imgs/news/13270_103640837750a3c30f79a08.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
